@@ -7,6 +7,7 @@ import mod.syconn.swm.client.screen.components.buttons.ToggleButton;
 import mod.syconn.swm.network.Network;
 import mod.syconn.swm.network.packets.serverside.RequestHologramPacket;
 import mod.syconn.swm.server.savedata.HologramNetwork;
+import mod.syconn.swm.utils.block.WorldPos;
 import mod.syconn.swm.utils.client.GraphicsUtil;
 import mod.syconn.swm.utils.client.WidgetComponent;
 import mod.syconn.swm.utils.math.ColorUtil;
@@ -16,18 +17,20 @@ import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.client.gui.components.PlayerFaceRenderer;
 import net.minecraft.client.gui.narration.NarrationElementOutput;
 import net.minecraft.client.multiplayer.PlayerInfo;
+import net.minecraft.nbt.CompoundTag;
 import net.minecraft.network.chat.Component;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 public class CallDataRenderer implements WidgetComponent {
 
-    private final List<MenuData> listedPlayers = new ArrayList<>();
-    private final List<MenuData> shownPlayers = new ArrayList<>();
+    private final List<CreateCallData> listedCreateCallPlayers = new ArrayList<>();
+    private final List<CreateCallData> shownCreateCallPlayers = new ArrayList<>();
+    private final List<JoinCallData> listedJoinCallPlayers = new ArrayList<>();
+    private final List<JoinCallData> shownJoinCallPlayers = new ArrayList<>();
     private final ToggleButton[] toggleButtons = new ToggleButton[3];
     private final Minecraft minecraft = Minecraft.getInstance();
     private final int color = ColorUtil.packArgb(74, 74, 74, 255);
@@ -49,7 +52,7 @@ public class CallDataRenderer implements WidgetComponent {
         this.search(this.lastSearch);
     }
 
-    private void init(Function<WidgetComponent, WidgetComponent> widgets) { // TODO ONLY SHOW CALLS TO JOIN THAT YOUR NOT OWNER OF
+    private void init(Function<WidgetComponent, WidgetComponent> widgets) {
         widgets.apply(this);
 
         for (int i = 0; i < 3; i++) {
@@ -57,41 +60,51 @@ public class CallDataRenderer implements WidgetComponent {
             this.toggleButtons[v] = (ToggleButton) widgets.apply(new ToggleButton(this.x + 180, this.y + 21 + this.height * v, false, ToggleButton.Color.GREEN, b -> this.toggled(b, v)));
         }
 
-        this.scroller = (ScrollWidget) widgets.apply(new ScrollWidget(x + 207, y + 11, 91, this.listedPlayers.size() - 3, w -> true, this::updateMenu));
+        this.scroller = (ScrollWidget) widgets.apply(new ScrollWidget(x + 207, y + 11, 91, this.listedCreateCallPlayers.size() - 3, w -> true, this::updateMenu));
     }
 
     private void toggled(ToggleButton button, int i) {
-        var player = this.listedPlayers.get(this.scroll + i);
-        this.listedPlayers.set(this.scroll + i, new MenuData(player.info, button.isActive(), player.locked));
+        var player = this.listedCreateCallPlayers.get(this.scroll + i);
+        this.listedCreateCallPlayers.set(this.scroll + i, new CreateCallData(player.info, button.isActive(), player.locked));
     }
 
     private void refreshPlayerList() {
         if (this.minecraft.player != null) {
-            this.listedPlayers.clear();
+            this.listedCreateCallPlayers.clear();
 
             if (this.page == HologramScreen.Page.CREATE_CALL) {
                 var connection = this.minecraft.player.connection;
                 var uuids = connection.getOnlinePlayerIds();
-                uuids.forEach(uuid -> this.listedPlayers.add(MenuData.of(connection.getPlayerInfo(uuid), isPlayerMe(connection.getPlayerInfo(uuid)))));
-                for (int i = 0; i < 2; i++) this.listedPlayers.add(MenuData.of(ClientHooks.getInfo(ClientHooks.createMockPlayer(this.minecraft.level, "Test-Player" + (i + 1))), false)); // TODO REMOVE
+                uuids.forEach(uuid -> this.listedCreateCallPlayers.add(CreateCallData.of(connection.getPlayerInfo(uuid), isPlayerMe(connection.getPlayerInfo(uuid)))));
+                for (int i = 0; i < 2; i++) this.listedCreateCallPlayers.add(CreateCallData.of(ClientHooks.getInfo(ClientHooks.createMockPlayer(this.minecraft.level, "Test-Player" + (i + 1))), false)); // TODO REMOVE
             } else Network.CHANNEL.sendToServer(new RequestHologramPacket());
         }
     }
 
     private void updateMenu(int scroll) {
         this.scroll = scroll;
-        this.scroller.updateSize(this.shownPlayers.size() - 3);
+        this.scroller.updateSize(this.shownCreateCallPlayers.size() - 3);
 
         Arrays.stream(this.toggleButtons).forEach(b -> b.visible = false);
 
         if (this.page == HologramScreen.Page.CREATE_CALL) {
-            for (int i = scroll; i < Math.min(scroll + 3, this.shownPlayers.size()); i++) {
-                var player = this.shownPlayers.get(i);
+            for (int i = scroll; i < Math.min(scroll + 3, this.shownCreateCallPlayers.size()); i++) {
+                var player = this.shownCreateCallPlayers.get(i);
                 var toggle = this.toggleButtons[i - scroll];
                 toggle.setActive(player.added);
                 toggle.setLocked(player.locked);
                 toggle.visible = true;
             }
+        }
+    }
+
+    public void handleNetworkPacket(HologramNetwork network) {
+        if (this.minecraft.player != null) {
+            this.listedJoinCallPlayers.clear();
+
+            var connection = this.minecraft.player.connection;
+            var calls = network.getCalls(this.minecraft.player.getUUID());
+//            calls.forEach(call -> this.listedJoinCallPlayers.add(CreateCallData.of(connection.getPlayerInfo(call.owner().uuid()), isPlayerMe(connection.getPlayerInfo(call.owner().uuid())))));
         }
     }
 
@@ -101,10 +114,10 @@ public class CallDataRenderer implements WidgetComponent {
             graphics.drawCenteredString(this.minecraft.font, Component.literal("Add Players to Call"), x + width / 2, y, -1);
 
             var y = this.y + 11;
-            if (this.shownPlayers.isEmpty()) graphics.drawCenteredString(this.minecraft.font, Component.literal("No Players Found").withStyle(ChatFormatting.BOLD, ChatFormatting.RED),
+            if (this.shownCreateCallPlayers.isEmpty()) graphics.drawCenteredString(this.minecraft.font, Component.literal("No Players Found").withStyle(ChatFormatting.BOLD, ChatFormatting.RED),
                     x + width / 2, y + 16, -1);
-            for (int i = this.scroll; i < Math.min(this.scroll + 3, this.shownPlayers.size()); i++) {
-                var info = this.shownPlayers.get(i).info;
+            for (int i = this.scroll; i < Math.min(this.scroll + 3, this.shownCreateCallPlayers.size()); i++) {
+                var info = this.shownCreateCallPlayers.get(i).info;
                 var me = this.isPlayerMe(info);
                 var minY = y + this.height * (i - this.scroll);
                 var name = me ? "You" : info.getProfile().getName();
@@ -117,7 +130,7 @@ public class CallDataRenderer implements WidgetComponent {
             graphics.drawCenteredString(this.minecraft.font, Component.literal("Calls You can Join"), x + width / 2, y, -1);
 
             var y = this.y + 11;
-            if (this.shownPlayers.isEmpty()) graphics.drawCenteredString(this.minecraft.font, Component.literal("No Calls Found").withStyle(ChatFormatting.BOLD, ChatFormatting.RED),
+            if (this.shownCreateCallPlayers.isEmpty()) graphics.drawCenteredString(this.minecraft.font, Component.literal("No Calls Found").withStyle(ChatFormatting.BOLD, ChatFormatting.RED),
                     x + width / 2, y + 16, -1);
         }
     }
@@ -135,21 +148,30 @@ public class CallDataRenderer implements WidgetComponent {
 
     public void search(String search) {
         this.lastSearch = search;
-        this.shownPlayers.clear();
-        if (search == null || search.isEmpty()) this.shownPlayers.addAll(this.listedPlayers);
-        else this.shownPlayers.addAll(this.listedPlayers.stream().filter(s -> s.info.getProfile().getName().toLowerCase().contains(search.toLowerCase())).toList());
+        this.shownCreateCallPlayers.clear();
+        if (search == null || search.isEmpty()) this.shownCreateCallPlayers.addAll(this.listedCreateCallPlayers);
+        else this.shownCreateCallPlayers.addAll(this.listedCreateCallPlayers.stream().filter(s -> s.info.getProfile().getName().toLowerCase().contains(search.toLowerCase())).toList());
         this.updateMenu(0);
     }
 
     public void refresh() {
-        this.refreshPlayerList();
-        this.search(this.lastSearch);
+//        this.refreshPlayerList();
+//        this.search(this.lastSearch);
+
+        var network = new HologramNetwork();
+        var tag = new CompoundTag();
+        network.createCall(new HologramNetwork.Caller(this.minecraft.player.getUUID(), new WorldPos(this.minecraft.level.dimension(), this.minecraft.player.getOnPos()), false), List.of());
+        network.save(tag);
+        System.out.println(network.getCalls(this.minecraft.player.getUUID()));
+        System.out.println(tag);
+        network = HologramNetwork.load(tag);
+        System.out.println(network.getCalls(this.minecraft.player.getUUID()));
     }
 
     @Override
     public boolean mouseScrolled(double mouseX, double mouseY, double delta) {
         this.scroller.mouseScrolled(mouseX, mouseY, delta);
-        return this.listedPlayers.size() > 3;
+        return this.listedCreateCallPlayers.size() > 3;
     }
 
     @Override
@@ -169,13 +191,14 @@ public class CallDataRenderer implements WidgetComponent {
     public void updateNarration(NarrationElementOutput narrationElementOutput) {}
 
     public List<HologramNetwork.Caller> getCallers() {
-        return this.listedPlayers.stream().map(p -> new HologramNetwork.Caller(p.info.getProfile().getId(), null, false)).collect(Collectors.toList());
+        return this.listedCreateCallPlayers.stream().filter(p -> p.added).map(p -> new HologramNetwork.Caller(p.info.getProfile().getId(), null, false)).toList();
     }
 
-    public record MenuData(PlayerInfo info, boolean added, boolean locked) {
+    public record JoinCallData(PlayerInfo info, UUID callId) {}
 
-        public static MenuData of(PlayerInfo info, boolean isMe) {
-            return new MenuData(info, isMe, isMe);
+    public record CreateCallData(PlayerInfo info, boolean added, boolean locked) {
+        public static CreateCallData of(PlayerInfo info, boolean isMe) {
+            return new CreateCallData(info, isMe, isMe);
         }
     }
 }
